--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,26 @@ body {
 	width: 90%;
 	margin: 0px 0px 0px 10px;
 }
+.postcard-body {
+	display: flex;
+}
+.body-left p:first-child {
+	margin-top: 10px;
+	font: 20px;
+}
+.body-left,
+.body-right {
+	padding: 10px;
+}
+input {
+	border: none;
+	border-bottom: 1px gray solid;
+}
+.postcard-footer {
+	text-align: center;
+	margin: 40px;
+}
+.button {
+	background-color: grey;
+	padding: 10px;
+}
